updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am new to coding.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA </p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>photography and builing Lego</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job that allows me to work anywhere and anytime</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to devolop an app.</p>
     </section>
 
     <footer id="footer">
